// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`datasource/go/index getDigest gitlab digest is not supported at the moment 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "gitlab.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://gitlab.com/golang/text?go-get=1",
  },
]
`;

exports[`datasource/go/index getDigest returns digest 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "golang.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://golang.org/x/text?go-get=1",
  },
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate, br",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/golang/text/commits?per_page=1",
  },
]
`;

exports[`datasource/go/index getDigest returns null for no go-source tag 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "golang.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://golang.org/y/text?go-get=1",
  },
]
`;

exports[`datasource/go/index getDigest returns null for wrong name 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "golang.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://golang.org/y/text?go-get=1",
  },
]
`;

exports[`datasource/go/index getDigest support bitbucket digest 1`] = `"123"`;

exports[`datasource/go/index getDigest support bitbucket digest 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "api.bitbucket.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/golang/text",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "api.bitbucket.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/golang/text/commits/master",
  },
]
`;

exports[`datasource/go/index getReleases handles fyne.io 1`] = `
Object {
  "releases": Array [
    Object {
      "gitRef": "v1.0.0",
      "version": "v1.0.0",
    },
    Object {
      "gitRef": "v2.0.0",
      "version": "v2.0.0",
    },
  ],
  "sourceUrl": "https://github.com/fyne-io/fyne",
}
`;

exports[`datasource/go/index getReleases handles fyne.io 2`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "fyne.io",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://fyne.io/fyne?go-get=1",
  },
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate, br",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/fyne-io/fyne/tags?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate, br",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/fyne-io/fyne/releases?per_page=100",
  },
]
`;

exports[`datasource/go/index getReleases processes real data 1`] = `
Object {
  "releases": Array [
    Object {
      "gitRef": "v1.0.0",
      "version": "v1.0.0",
    },
    Object {
      "gitRef": "v2.0.0",
      "version": "v2.0.0",
    },
  ],
  "sourceUrl": "https://github.com/golang/text",
}
`;

exports[`datasource/go/index getReleases processes real data 2`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "golang.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://golang.org/x/text?go-get=1",
  },
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate, br",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/golang/text/tags?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate, br",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/golang/text/releases?per_page=100",
  },
]
`;

exports[`datasource/go/index getReleases returns none if no tags match submodules 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate, br",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/x/text/tags?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate, br",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/x/text/releases?per_page=100",
  },
]
`;

exports[`datasource/go/index getReleases returns none if no tags match submodules 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate, br",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/x/text/tags?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate, br",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/x/text/releases?per_page=100",
  },
]
`;

exports[`datasource/go/index getReleases returns null for 404 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "golang.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://golang.org/foo/something?go-get=1",
  },
]
`;

exports[`datasource/go/index getReleases returns null for empty result 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "golang.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://golang.org/foo/something?go-get=1",
  },
]
`;

exports[`datasource/go/index getReleases returns null for go-import prefix mismatch 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "git.enterprise.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://git.enterprise.com/example/module?go-get=1",
  },
]
`;

exports[`datasource/go/index getReleases returns null for unknown error 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "golang.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://golang.org/foo/something?go-get=1",
  },
]
`;

exports[`datasource/go/index getReleases skips unsupported platform 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "golang.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://golang.org/x/text?go-get=1",
  },
]
`;

exports[`datasource/go/index getReleases skips wrong package 1`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "golang.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://golang.org/x/sys?go-get=1",
  },
]
`;

exports[`datasource/go/index getReleases support bitbucket tags 1`] = `
Object {
  "releases": Array [
    Object {
      "gitRef": "v1.0.0",
      "version": "v1.0.0",
    },
    Object {
      "gitRef": "v2.0.0",
      "version": "v2.0.0",
    },
  ],
  "sourceUrl": "https://bitbucket.org/golang/text",
}
`;

exports[`datasource/go/index getReleases support bitbucket tags 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "api.bitbucket.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.bitbucket.org/2.0/repositories/golang/text/refs/tags",
  },
]
`;

exports[`datasource/go/index getReleases support ghe 1`] = `
Object {
  "releases": Array [
    Object {
      "gitRef": "v1.0.0",
      "version": "v1.0.0",
    },
    Object {
      "gitRef": "v2.0.0",
      "version": "v2.0.0",
    },
  ],
  "sourceUrl": "https://git.enterprise.com/example/module",
}
`;

exports[`datasource/go/index getReleases support ghe 2`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "git.enterprise.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://git.enterprise.com/example/module?go-get=1",
  },
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate, br",
      "host": "git.enterprise.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://git.enterprise.com/api/v3/repos/example/module/tags?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate, br",
      "host": "git.enterprise.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://git.enterprise.com/api/v3/repos/example/module/releases?per_page=100",
  },
]
`;

exports[`datasource/go/index getReleases support gitlab 1`] = `
Object {
  "releases": Array [
    Object {
      "gitRef": "v1.0.0",
      "version": "v1.0.0",
    },
    Object {
      "gitRef": "v2.0.0",
      "version": "v2.0.0",
    },
  ],
  "sourceUrl": "https://gitlab.com/golang/text",
}
`;

exports[`datasource/go/index getReleases support gitlab 2`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "golang.org",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://golang.org/x/text?go-get=1",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "host": "gitlab.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://gitlab.com/api/v4/projects/golang%2Ftext/repository/tags?per_page=100",
  },
]
`;

exports[`datasource/go/index getReleases support self hosted gitlab private repositories 1`] = `
Object {
  "releases": Array [
    Object {
      "gitRef": "v1.0.0",
      "version": "v1.0.0",
    },
    Object {
      "gitRef": "v2.0.0",
      "version": "v2.0.0",
    },
  ],
  "sourceUrl": "https://my.custom.domain/golang/myrepo",
}
`;

exports[`datasource/go/index getReleases support self hosted gitlab private repositories 2`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer some-token",
      "host": "my.custom.domain",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://my.custom.domain/golang/myrepo?go-get=1",
  },
  Object {
    "headers": Object {
      "accept": "application/json",
      "accept-encoding": "gzip, deflate, br",
      "authorization": "Bearer some-token",
      "host": "my.custom.domain",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://my.custom.domain/api/v4/projects/golang%2Fmyrepo/repository/tags?per_page=100",
  },
]
`;

exports[`datasource/go/index getReleases unknown datasource returns null 1`] = `null`;

exports[`datasource/go/index getReleases unknown datasource returns null 2`] = `
Array [
  Object {
    "headers": Object {
      "accept-encoding": "gzip, deflate, br",
      "host": "some.unknown.website",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://some.unknown.website/example/module?go-get=1",
  },
]
`;

exports[`datasource/go/index getReleases works for known servers 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate, br",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/x/text/tags?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate, br",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/x/text/releases?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate, br",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/x/text/tags?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate, br",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/x/text/releases?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate, br",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/go-x/x/tags?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate, br",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/go-x/x/releases?per_page=100",
  },
]
`;

exports[`datasource/go/index getReleases works for nested modules on github 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate, br",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/x/text/tags?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate, br",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/x/text/releases?per_page=100",
  },
]
`;

exports[`datasource/go/index getReleases works for nested modules on github 2`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate, br",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/x/text/tags?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate, br",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/x/text/releases?per_page=100",
  },
]
`;

exports[`datasource/go/index getReleases works for nested modules on github v2+ major upgrades 1`] = `
Array [
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate, br",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/x/text/tags?per_page=100",
  },
  Object {
    "headers": Object {
      "accept": "application/vnd.github.v3+json",
      "accept-encoding": "gzip, deflate, br",
      "host": "api.github.com",
      "user-agent": "https://github.com/renovatebot/renovate",
    },
    "method": "GET",
    "url": "https://api.github.com/repos/x/text/releases?per_page=100",
  },
]
`;
